# pyproject.toml
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pytusk"]

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytusk"

description = "Walrus client Python SDK"
requires-python = ">=3.11"
keywords = ["software development kit", "sui", "blockchain"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "pysui >= 1.0.0"
]

dynamic = ["version", "readme"]


[project.scripts]

[tool.setuptools.packages.find]
exclude = [
    "out*",
    "temp*",
    "test*",
    "tools*",
    "build*",
    "doc*",
    "images*",
]


[tool.setuptools.dynamic]
version = { attr = "pytusk.version.__version__" }
readme = { file = ["README.rst"], content-type = "text/x-rst" }

[tool.setuptools.package-data]
pytusk = ["*.json"]

[project.urls]
repository = "https://github.com/Suitters/pytusk"
